# jupyterlab-sql-editor

./: .gitignore  .prettierignore  .yarnrc.yml  404.html  CONTRIBUTING.md  HOWITWORKS.md  LICENSE  MANIFEST.in  README-fr.md  README.md  RELEASE.md  azure-pipelines.yml  index.html  install.json  mkdocs.yml  package-lock.json  package.json  pyproject.toml  search.html  setup.py  sitemap.xml  sparksql-lsp.json
.github/: dependabot.yml
backup/: package-lock.json
cccs/ipython/: SparkSchemaWidget.py  sparkdf.py
cccs_display/: common.py  sparkdf.py
docs/: index.md  sparksql.md  trino.md
docs/example/: JinjaTemplate.ipynb  Spark.ipynb  SparkConfigurationUsage.ipynb  SparkDataframe.ipynb  SparkSQLEscapeControlChars.ipynb  SparkSyntaxDemo.ipynb  SupersetJinjaTestHarness.ipynb  Trino.ipynb  TrinoConfigurationUsage.ipynb  TrinoJinjaTemplate.ipynb  contacts.json
example/: JinjaTemplate.ipynb  Spark.ipynb  SparkDataframe.ipynb  SparkSQLEscapeControlChars.ipynb  SparkSqlMagic.ipynb  SparkSqlSyntaxAndLSP.ipynb  SparkSyntaxDemo.ipynb  SupersetJinjaTestHarness.ipynb  Trino.ipynb  TrinoSqlSyntaxAndLSP.ipynb  Untitled.ipynb  contacts.json  conversations.json
example/JinjaTemplate/: index.html
example/Spark/: index.html
example/SparkConfigurationUsage/: index.html
example/SparkDataframe/: index.html
example/SparkSQLEscapeControlChars/: index.html
example/SparkSyntaxDemo/: index.html
example/SupersetJinjaTestHarness/: index.html
example/Trino/: index.html
example/TrinoConfigurationUsage/: index.html
example/TrinoJinjaTemplate/: index.html
ipython_display/: sparkdf.py
ipython_magic/common/: base.py  template.py
ipython_magic/sparksql/: SparkSchemaWidget.py  main.py  schema_export.py  spark_export.py  sparksql.py
ipython_magic/trino/: main.py  schema_export.py  trino.py  trino_export.py
ipython_magic/utils/: template.py
ipython_sparksql_magic/: sparksql.py
ipython_trino_magic/: __init__.py  trino.py
jupyterlab_sql_editor/: __init__.py  _version.py
jupyterlab_sql_editor/ipython/: SparkSchemaWidget.py  common.py  spark_streaming_query.py  sparkdf.py
jupyterlab_sql_editor/ipython_magic/: base.py  export.py  messages.py  result_cache.py  sql-language-server.schema.json  util.py
jupyterlab_sql_editor/ipython_magic/common/: base.py  export.py
jupyterlab_sql_editor/ipython_magic/sparksql/: __init__.py  main.py  spark_export.py  spark_schema_widget.py  spark_streaming_query.py  sparkdf.py  sparksql.py
jupyterlab_sql_editor/ipython_magic/sparksql/config/: sparksql-language-server.schema.json
jupyterlab_sql_editor/ipython_magic/trino/: __init__.py  main.py  parser.out  parser.py  parser_test.py  parsetab.py  trino.py  trino_export.py  trino_schema_widget.py
jupyterlab_sql_editor/ipython_magic/trino/config/: trino-language-server.schema.json
jupyterlab_sql_editor/outputters/: outputters.py  util.py
overrides/: sparksql-lsp.json  syntax_highlighting.json  trino-lsp.json
schema/: plugin.json
search/: search_index.json
sparksql/: __init__.py  index.html  schema_export.py  sparksql.py
src/: constants.ts  formatter.ts  index.ts  utils.ts
trino/: index.html
trinosql/: __init__.py  schema_export.py  trinosql.py
